@@ -166,6 +166,8 @@ Version 1.3-svn:
    * extended label to support team only and colors
    * gender-specific forms for trait names are now possible.
    * seting a WML variable to a random value now works correctly in MP games
+   * text displayed when a unit is ambushed is now customizable with the new 
+     alert= key of the [hides] ability (FR #8264 2.)
  * sound
    * add advanced sound tab to pref allowing you to play with sample_rate and
      buffer_size options
